# gettention

./: .gitignore  Dockerfile  Makefile  README.md  Snakefile  gettention.bib  pyproject.toml  requirements.txt
TOSICA/: __init__.py
data/pfalciparum/: pf10xIDC_pheno.arrow
gettention/: data.py  model.py
notebooks/: 02-eval.ipynb
report/: final_report.bib  final_report.tex  midway_report.tex
report/mid/: midway_report.bib  midway_report.tex
src/python/: 00-preprocess_falciparum.py  01-performer_pfalci.py  02-transformer_pfalci.py  03-tosica_pfalci.py  preprocess_liver.py  split_liver.py  split_pfalci.py
