[tool.poetry]
name = "gettention"
version = "0.1.0"
description = ""
authors = ["Ryan Videgar-Laird <ryanvl@unc.edu>"]
repository = "https://github.com/ryanvidegar-laird/gettention"
readme = "README.md"
packages = [{include = "gettention"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = [
  {version = "^2.1.0+cu118", source = "pytorch", markers = "sys_platform == 'linux'"},
  {version = "^2.1.0", source = "PyPI", markers = "sys_platform == 'darwin'"}
]
numpy = "^1.26.2"
pyarrow = "^14.0.1"
scanpy = "^1.9.6"
matplotlib = "^3.8.2"
seaborn = "*"
scikit-learn = "^1.3.2"
performer-pytorch = "^1.1.4"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"

[tool.poetry.group.extras.dependencies]
snakemake = "^7.32.4"
scipy = "*"
scikit-misc = "*"
louvain = "*"
tensorboard = "*"
protobuf = "*"
einops = "*"
pydot = "*"
llvmlite = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
